--- a/app/src/main/res/layout/booking_confirmed_item_layout.xml
+++ b/app/src/main/res/layout/booking_confirmed_item_layout.xml
@@ -49,7 +49,7 @@
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/lato_bold"
                             android:text="customer_name"
-                            android:textAppearance="?attr/textAppearanceHeadline6"
+                            android:textSize="16sp"
                             android:textColor="@color/textColor" />
 
                         <TextView
@@ -58,7 +58,7 @@
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/lato"
                             android:text="customer_email"
-                            android:textAppearance="?attr/textAppearanceBody2"
+                            android:textSize="14sp"
                             android:textColor="@color/textColor" />
                     </LinearLayout>
 
@@ -86,7 +86,7 @@
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/lato"
                             android:text="Contact Number:"
-                            android:textAppearance="?attr/textAppearanceBody2"
+                            android:textSize="14sp"
                             android:textColor="@color/textColor" />
 
                         <Space
@@ -99,7 +99,7 @@
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/lato"
                             android:text="From:"
-                            android:textAppearance="?attr/textAppearanceBody2"
+                            android:textSize="14sp"
                             android:textColor="@color/textColor" />
 
                         <TextView
@@ -107,7 +107,7 @@
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/lato"
                             android:text="To:"
-                            android:textAppearance="?attr/textAppearanceBody2"
+                            android:textSize="14sp"
                             android:textColor="@color/textColor" />
 
                         <Space
@@ -119,7 +119,7 @@
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/lato"
                             android:text="Date:"
-                            android:textAppearance="?attr/textAppearanceBody2"
+                            android:textSize="14sp"
                             android:textColor="@color/textColor" />
 
                         <TextView
@@ -127,7 +127,7 @@
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/lato"
                             android:text="Time:"
-                            android:textAppearance="?attr/textAppearanceBody2"
+                            android:textSize="14sp"
                             android:textColor="@color/textColor" />
 
                         <Space
@@ -139,7 +139,7 @@
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/lato"
                             android:text="Adult:"
-                            android:textAppearance="?attr/textAppearanceBody2"
+                            android:textSize="14sp"
                             android:textColor="@color/textColor" />
 
                         <TextView
@@ -147,7 +147,7 @@
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/lato"
                             android:text="Child:"
-                            android:textAppearance="?attr/textAppearanceBody2"
+                            android:textSize="14sp"
                             android:textColor="@color/textColor" />
 
                         <Space
@@ -187,7 +187,7 @@
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/lato_black"
                             android:text="Total:"
-                            android:textAppearance="?attr/textAppearanceHeadline6"
+                            android:textSize="16sp"
                             android:textColor="@color/textColor" />
 
                         <TextView
@@ -195,7 +195,7 @@
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/lato_black"
                             android:text="Ref. No.:"
-                            android:textAppearance="?attr/textAppearanceHeadline6"
+                            android:textSize="16sp"
                             android:textColor="@color/textColor" />
 
                     </LinearLayout>
@@ -211,7 +211,7 @@
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/lato"
                             android:text="contact_number"
-                            android:textAppearance="?attr/textAppearanceBody2"
+                            android:textSize="14sp"
                             android:textColor="@color/textColor" />
 
                         <Space
@@ -224,7 +224,7 @@
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/lato"
                             android:text="location_from"
-                            android:textAppearance="?attr/textAppearanceBody2"
+                            android:textSize="14sp"
                             android:textColor="@color/textColor" />
 
                         <TextView
@@ -233,7 +233,7 @@
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/lato"
                             android:text="location_to"
-                            android:textAppearance="?attr/textAppearanceBody2"
+                            android:textSize="14sp"
                             android:textColor="@color/textColor" />
 
                         <Space
@@ -246,7 +246,7 @@
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/lato"
                             android:text="schedule_date"
-                            android:textAppearance="?attr/textAppearanceBody2"
+                            android:textSize="14sp"
                             android:textColor="@color/textColor" />
 
                         <TextView
@@ -255,7 +255,7 @@
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/lato"
                             android:text="schedule_time"
-                            android:textAppearance="?attr/textAppearanceBody2"
+                            android:textSize="14sp"
                             android:textColor="@color/textColor" />
 
                         <Space
@@ -268,7 +268,7 @@
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/lato"
                             android:text="adult_count"
-                            android:textAppearance="?attr/textAppearanceBody2"
+                            android:textSize="14sp"
                             android:textColor="@color/textColor" />
 
                         <TextView
@@ -277,7 +277,7 @@
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/lato"
                             android:text="child_count"
-                            android:textAppearance="?attr/textAppearanceBody2"
+                            android:textSize="14sp"
                             android:textColor="@color/textColor" />
 
                         <Space
@@ -325,7 +325,7 @@
                                 android:layout_height="wrap_content"
                                 android:fontFamily="@font/lato_bold"
                                 android:text="@string/peso_sign"
-                                android:textAppearance="?attr/textAppearanceHeadline6"
+                                android:textSize="16sp"
                                 android:textColor="@color/textColor" />
 
                             <TextView
@@ -334,7 +334,7 @@
                                 android:layout_height="wrap_content"
                                 android:fontFamily="@font/lato_bold"
                                 android:text=""
-                                android:textAppearance="?attr/textAppearanceHeadline6"
+                                android:textSize="16sp"
                                 android:textColor="@color/textColor" />
                         </LinearLayout>
 
@@ -346,7 +346,7 @@
                             android:fontFamily="@font/lato_bold"
                             android:maxLines="1"
                             android:text="reference_number"
-                            android:textAppearance="?attr/textAppearanceHeadline6"
+                            android:textSize="16sp"
                             android:textColor="@color/textColor" />
 
                     </LinearLayout>
