--- a/app/src/main/res/layout/fragment_active_booking.xml
+++ b/app/src/main/res/layout/fragment_active_booking.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:weightSum="20"
     android:orientation="vertical"
-    tools:context=".ui.fragments.user.booking.BookingsFragment">
+    tools:context=".ui.fragments.user.booking.ActiveBookingFragment">
 
     <RelativeLayout
         android:layout_weight="10"
