--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -49,8 +49,7 @@
             android:layout_height="match_parent"
             android:layout_above="@id/bottom_nav_view"
             android:layout_below="@+id/toolbarContainer"
-            app:defaultNavHost="true"
-            app:navGraph="@navigation/mobile_navigation_drawer" />
+            app:defaultNavHost="true" />
 
         <com.google.android.material.bottomnavigation.BottomNavigationView
             android:id="@+id/bottom_nav_view"
