--- a/app/src/main/res/layout/activity_message_admin.xml
+++ b/app/src/main/res/layout/activity_message_admin.xml
@@ -7,7 +7,7 @@
     android:background="#FFFFFF"
     android:fitsSystemWindows="true"
     android:orientation="vertical"
-    tools:context=".MessageAdminActivity">
+    tools:context=".admin.MessageAdminActivity">
 
     <com.google.android.material.appbar.MaterialToolbar
         android:id="@+id/toolbar"
